--- a/css/general.css
+++ b/css/general.css
@@ -11,3 +11,13 @@ body {
     font-family: PressStart2P;
     src: url("../assets/fonts/PressStart2P-Regular.ttf") format("truetype");
 }
+
+.main-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 3em;
+}
