Start with thumb-up implemented

--- a/css/game.css
+++ b/css/game.css
@@ -1,12 +1,17 @@
+
+/* Estilos del panel de juego */
+
 div.game-container {
     position: relative;
     display: inline-block;
+    display: none;
 }
 
 canvas.board {
     background-image: url('../assets/images/bg.png');
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     z-index: 1;
     position: relative;
 }
@@ -37,4 +42,92 @@ button.restart img {
     width: 100%;
     height: 100%;
     object-fit: contain;
+}
+
+/* Estilos del panel de instrucciones */
+
+h1 , li {
+    font-family: 'PressStart2P';
+    color: #fff;
+    font-weight: 100;
+}
+
+h1 {
+    margin-bottom: 50px;
+}
+
+li {
+    text-align: left;
+}
+
+div.text-container {
+    background-color: #00000081;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+li {
+    margin: 20px 0;
+}
+
+div.instructions-container {
+    background-image: url("../assets/images/bg.png");
+    width: 750px;
+    height: 570px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+button.start{
+    object-fit: contain;
+    transition: 0.1s ease-in-out;
+    width: 50%;
+    height: 70%;
+    border: none;
+    background: transparent;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 20px;
+}
+
+button.start:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: 0.1s ease-in-out;
+}
+
+button.start img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+div.actions-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    background-color: #0000004d;
+    padding: 7px;
+    border-radius: 10px;
+}
+
+img#likeHand {
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+    margin-left: 20px;
+}
+
+
+b#or{
+    color: #fff;
+    font-family: 'PressStart2P';
 }
