--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ div.screen-container{
     height: 570px;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
