--- a/views/instructions.html
+++ b/views/instructions.html
@@ -10,12 +10,11 @@
 </head>
 <body>
     <div class="main-container">
-        <div class="video-view" id="videoView">
+        <!-- <div class="video-view" id="videoView">
             <video class="webcam" autoplay playsinline id="webcam"></video>
             <canvas class="output-canvas" id="outputCanvas" width="1280" height="720" ></canvas>
-        </div>
-
-        <div class="instructions-container" id="instructions-container">
+        </div> -->
+        <div class="instructions-container">
             <div class="text-container">
                 <h1>Instrucciones</h1>
                 <ol>
@@ -27,22 +26,12 @@
                 </ol>
             </div>
             <div class="actions-container">
-                <button class="start" id="start-game"> 
+                <button class="start" id="start"> 
                     <img src="../assets/images/start-btn.png" alt="restart game">
                 </button>
                 <b id="or">ó</b>
                 <img id="likeHand" src="../assets/images/like_hand.png" alt="Pulgar arriba">
             </div>
-        </div>
-
-        <div class="game-container" id="game-container">
-            <canvas id="board" class="board">
-                
-            </canvas>
-            
-            <button class="restart" id="restart"> 
-                <img src="../assets/images/restart-btn.png" alt="restart game">
-            </button>
         </div>
     </div>
 </body>
